fixe super-header nav alignment for tablet

--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,7 @@ ul#footer li a:hover {
 	}
 	#header-top-inner {
     height: 30px;
+    width:720px;
   }
 
 	ul#main-navigation li:first-of-type a {
